--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     />
     <title>the surfing project</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="nav bg-dark space-between text-light">
+      <div class="logo">The surfing Project</div>
+    </nav>
+  </body>
 </html>
