--- a/index.html
+++ b/index.html
@@ -53,15 +53,10 @@
         </form>
       </div>
     </nav>
-    <div class="card text-white text-center">
-      <img
-        class="card-img"
-        src="./assets/rafael-leao-PW0-vZD0wis-unsplash.jpg"
-        alt="Card image"
-      />
-      <div class="card-img-overlay">
-        <h1 class="card-title">Partez à l'aventure</h1>
-        <p class="card-text">Decouvrez notre ecole de surf en peer-learning</p>
+    <div class="text-white text-center"          style="background-image: url(./assets/rafael-leao-PW0-vZD0wis-unsplash.jpg);background-size:cover;height: 500px;" >
+    
+        <h1 class="card-title p-4">Partez à l'aventure</h1>
+        <p class="card-text p-3">Decouvrez notre ecole de surf en peer-learning</p>
         <div class="card-button d-flex justify-content-center">
           <button type="button" class="btn btn-primary">
             Je m'inscris a la prochaine session
@@ -74,7 +69,6 @@
           </button>
         </div>
       </div>
-    </div>
     <section class="bg-white text-center">
       <h1 class="text-center">The surfing project en 3 points</h1>
       <div class="text-center">
